--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_lcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_lcm.html
@@ -21,13 +21,13 @@
             {% if hw_notices %}
             <li role="presentation" class="active">
                 <a href="#hardware" aria-controls="hardware" role="tab" data-toggle="tab">
-                    Hardware LifeCycle Notices  <span class="badge badge-pill badge-primary">{{ hw_notices.count }}</span>
+                    Hardware Lifecycle Notices  <span class="badge badge-pill badge-primary">{{ hw_notices.count }}</span>
                 </a>
 
             </li>
             {% endif %}
             {% if sw_notices %}
-            <li role="presentation"><a href="#software" aria-controls="software" role="tab" data-toggle="tab">Software LifeCycle Notices</a></li>
+            <li role="presentation"><a href="#software" aria-controls="software" role="tab" data-toggle="tab">Software Lifecycle Notices</a></li>
             {% endif %}
         </ul>
 
