Refactor ValidatedSoftwareLCM and the way software objects are accessed. Other minor improvements.

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/software_and_validatedsoftware_info.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/software_and_validatedsoftware_info.html
@@ -8,7 +8,7 @@
     {% endif %}
     {% if validsoft_table %}
     <div class="col-md-12">
-        {% include 'panel_table.html' with table=validsoft_table heading='Validated Software' panel_class="panel panel-default" %}
+        {% include 'nautobot_device_lifecycle_mgmt/inc/validatedsoftware_info.html' %}
     </div>
     {% endif %}
 </div>
