--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/software_info.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/software_info.html
@@ -6,7 +6,7 @@
         <div class="panel panel-danger">
         {% endif %}
             <div class="panel-heading">
-                <strong>Software</strong>
+                <strong>Software is {% if obj_soft_valid %}valid{% else %}invalid{% endif %}</strong>
             </div>
             <table class="table table-hover panel-body attr-table">
                 <tr>
