--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftwarelcm.html
@@ -70,22 +70,27 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Assigned To</td>
-                    <td>
-                        {% if object.assigned_to %}
-                            <a href="{{ object.assigned_to.get_absolute_url }}">{{ object.assigned_to }}</a>
-                        {% else %}
-                            &mdash;
-                        {% endif %}
-                    </td>
-                </tr>
-                <tr>
                     <td>Valid Start</td>
                     <td>{{ object.start }}</td>
                 </tr>
                 <tr>
                     <td>Valid End</td>
-                    <td>{{ object.end }}</td>
+                    <td>
+                        {% if object.end %}
+                            {{ object.end }}
+                        {% else %}
+                            &mdash;
+                        {% endif %}
+                    </td>
+                </tr>
+                    <td>Valid Now</td>
+                    <td>
+                    {% if object.valid is True %}
+                        <span class="text-success"><i class="mdi mdi-check-bold"></i></span>
+                    {% else %}
+                        <span class="text-danger"><i class="mdi mdi-close"></i></span>
+                    {% endif %}
+                    </td>
                 </tr>
                 <tr>
                     <td>Preferred Version</td>
@@ -102,6 +107,109 @@
         {% include 'inc/custom_fields_panel.html' %}
         {% include 'inc/relationships_panel.html' %}
         {% include 'extras/inc/tags_panel.html' with tags=object.tags.all %}
+    </div>
+    <div class="col-md-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <strong>Device assignments</strong>
+            </div>
+            <table class="table table-hover panel-body attr-table">
+                <tr>
+                    <td>
+                        Devices
+                    </td>
+                    <td>
+                        {% if object.devices.all %}
+                        <ul>
+                            {% for device in object.devices.all %}
+                                <li><a href="{{ device.get_absolute_url }}">{{ device }}</a></li>
+                            {% endfor %}
+                        </ul>
+                        {% else %}
+                            <span class="text-muted">None</span>
+                        {% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Device Types
+                    </td>
+                    <td>
+                        {% if object.device_types.all %}
+                        <ul>
+                            {% for device_type in object.device_types.all %}
+                                <li><a href="{{ device_type.get_absolute_url }}">{{ device_type }}</a></li>
+                            {% endfor %}
+                        </ul>
+                        {% else %}
+                            <span class="text-muted">None</span>
+                        {% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Device Roles
+                    </td>
+                    <td>
+                        {% if object.device_roles.all %}
+                        <ul>
+                            {% for role in object.device_roles.all %}
+                                <li><a href="{{ role.get_absolute_url }}">{{ role }}</a></li>
+                            {% endfor %}
+                        </ul>
+                        {% else %}
+                            <span class="text-muted">None</span>
+                        {% endif %}
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <strong>Inventory Items assignments</strong>
+            </div>
+                <table class="table table-hover panel-body attr-table">
+                    <tr>
+                        <td>
+                            Inventory Items
+                        </td>
+                        <td>
+                            {% if object.inventory_items.all %}
+                            <ul>
+                                {% for inventory_item in object.inventory_items.all %}
+                                    <li><a href="{{ inventory_item.get_absolute_url }}">{{ inventory_item }}</a></li>
+                                {% endfor %}
+                            </ul>
+                            {% else %}
+                                <span class="text-muted">None</span>
+                            {% endif %}
+                        </td>
+                    </tr>
+                </table>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <strong>Object Tags assignments</strong>
+            </div>
+                <table class="table table-hover panel-body attr-table">
+                    <tr>
+                        <td>
+                            Object Tags
+                        </td>
+                        <td>
+                            {% if object.object_tags.all %}
+                            <ul>
+                                {% for object_tag in object.object_tags.all %}
+                                    <li><a href="{{ object_tag.get_absolute_url }}">{{ object_tag }}</a></li>
+                                {% endfor %}
+                            </ul>
+                            {% else %}
+                                <span class="text-muted">None</span>
+                            {% endif %}
+                        </td>
+                    </tr>
+                </table>
+        </div>
     </div>
 </div>
 {% endblock %}
