--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/software_overview_report.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/software_overview_report.html
@@ -56,7 +56,7 @@
                         <td>{% if device_aggr.invalid is not None %} {{ device_aggr.invalid }} {% else %} -- {% endif %}</td>
                         <td>{% if device_aggr.sw_missing is not None %} {{ device_aggr.sw_missing }} {% else %} -- {% endif %}</td>
                         <td>{% if device_aggr.valid_percent is not None %} {{ device_aggr.valid_percent }} % {% else %} -- {% endif %}</td>
-                        <td><a download="devices_pie_chart.jpg" href="data:image/png;base64,{{ device_visual|safe }}" title="Devices Pie Chart">
+                        <td><a target="_blank" href="data:image/png;base64,{{ device_visual|safe }}" title="Devices Pie Chart">
                             <img style="width:150px;" src="data:image/png;base64,{{ device_visual|safe }}" alt="Devices Pie Chart">
                             </a>
                         </td>
@@ -68,7 +68,7 @@
                         <td>{% if inventory_aggr.invalid is not None %} {{ inventory_aggr.invalid }} {% else %} -- {% endif %}</td>
                         <td>{% if inventory_aggr.sw_missing is not None %} {{ inventory_aggr.sw_missing }} {% else %} -- {% endif %}</td>
                         <td>{% if inventory_aggr.valid_percent is not None %} {{ inventory_aggr.valid_percent }} % {% else %} -- {% endif %}</td>
-                        <td ><a download="inventory_pie_chart.jpg" href="data:image/png;base64,{{ inventory_visual|safe }}" title="Inventory Pie Chart">
+                        <td ><a target="_blank" href="data:image/png;base64,{{ inventory_visual|safe }}" title="Inventory Pie Chart">
                             <img style="width:150px;" src="data:image/png;base64,{{ inventory_visual|safe }}" alt="Inventory Pie Chart">
                             </a>
                         </td>
