--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_inventoryitem_report.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/validatedsoftware_inventoryitem_report.html
@@ -66,7 +66,7 @@
                     </tr>
                 </tbody>
             </table>
-            <h3 class="text-center m-2 p-3">Inventory Manufacturer Summary</h3>
+            <h3 class="text-center m-2 p-3">Inventory Item Name Summary</h3>
             {% include 'utilities/obj_table.html' %}
             </div>
         <div class="col-md-3 noprint">
