--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_notice.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/inc/device_notice.html
@@ -1,5 +1,5 @@
 {% load helpers %}
-{% if perms.view and hw_notices or sw_notices %}
+{% if perms.nautobot_device_lifecycle_mgmt.view_hardwarelcm and hw_notices %}
 <style type="text/css">
     .panel-heading .accordion-toggle:after {
         /* symbol for "opening" panels */
