--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/cvelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/cvelcm.html
@@ -64,7 +64,7 @@
                 </tr>
                 <tr>
                     <td>Status</td>
-                    <td><span class="label" style="color: {{ object.status.color|fgcolor }}; background-color: #{{ object.status.color }}">{{ object.get_status_display }}</span></td>
+                    <td>{% if object.status %} <span class="label" style="color: {{ object.status.color|fgcolor }}; background-color: #{{ object.status.color }}">{{ object.get_status_display }}</span> {% else %} &mdash; {% endif %}</td>
                 </tr>
                 <tr>
                     <td>Description</td>
