--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm.html
@@ -29,8 +29,8 @@
     </div>
     <div class="pull-right noprint">
         {% plugin_buttons object %}
-        {% if perms.nautobot_device_lifecycle_mgmt.add_softwareimage and active_tab == 'software-images' %}
-            <a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:softwareimage_add' %}?software={{ object.pk }}" class="btn btn-success">
+        {% if perms.nautobot_device_lifecycle_mgmt.add_softwareimagelcm and active_tab == 'software-images' %}
+            <a href="{% url 'plugins:nautobot_device_lifecycle_mgmt:softwareimagelcm_add' %}?software={{ object.pk }}" class="btn btn-success">
                 <span class="mdi mdi-plus-thick" aria-hidden="true"></span>
                 Add a Software Image
             </a>
