Linting and tidy up

--- a/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm_software_images.html
+++ b/nautobot_device_lifecycle_mgmt/templates/nautobot_device_lifecycle_mgmt/softwarelcm_software_images.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="row">
         <div class="col-md-8">
-            {% include 'utilities/obj_table.html' with table=softwareimages_table table_template='panel_table.html' %}
+            {% include 'utilities/obj_table.html' with table=softwareimages_table table_template='panel_table.html' heading='Software Images' %}
         </div>
     </div>
 {% endblock %}
